--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "decap-cms-alter",
-  "description": "Alternative Theme of Decap CMS.",
+  "description": "Alternative Decap CMS.",
   "version": "3.1.11",
-  "repository": "https://github.com/olegfedak/decap-cms-alter",
+  "homepage": "https://github.com/olegfedak/decap-cms-alter",
+  "repository": "https://github.com/olegfedak/decap-cms",
   "bugs": "https://github.com/olegfedak/decap-cms/issues",
   "main": "dist/decap-cms.js",
   "keywords": [
