--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "decap-cms-alter",
   "description": "Alternative Decap CMS.",
-  "version": "3.1.12",
-  "homepage": "https://github.com/olegfedak/decap-cms-alter",
-  "repository": "https://github.com/olegfedak/decap-cms",
+  "version": "3.1.13",
+  "repository": "https://github.com/olegfedak/decap-cms-alter",
   "bugs": "https://github.com/olegfedak/decap-cms/issues",
   "main": "dist/decap-cms.js",
   "keywords": [
